--- a/.env
+++ b/.env
@@ -27,12 +27,12 @@ APP_SECRET=adfde4a6f868fe6cbf241066e3528ef0
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+#DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 #DATABASE_URL="mysql://root:@127.0.0.1:3306/delivery?serverVersion=8&charset=utf8mb4"
-#DATABASE_URL="mysql://root@127.0.0.1:3306/delivery?serverVersion=mariadb-10.4.11&charset=utf8mb4"
+#DATABASE_URL="mysql://root@127.0.0.1:3306/delivery?serverVersion=mariadb-10.4.11"(buena)
 DATABASE_URL="mysql://root@127.0.0.1:3306/delivery?serverVersion=8"
 #DATABASE_URL="mysql://root@127.0.0.1:3306/delivery?serverVersion=8&charset=utf8mb4"
-# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+#DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
