--- a/config/serializer/Categoria.yaml
+++ b/config/serializer/Categoria.yaml
@@ -1,7 +1,7 @@
 App\Entity\Categoria:
   attributes:
     id:
-      groups: ['post_categoria']
+      groups: ['post_categoria', 'get_categoria', 'up_categoria']
 
     categoria:
-      groups: ['get_categorias', 'post_categoria']
+      groups: ['get_categorias', 'post_categoria', 'get_categoria', 'up_categoria']
