Sesion 14 - CRUD y QueryBuilder

--- a/config/serializer/Provincias.yaml
+++ b/config/serializer/Provincias.yaml
@@ -1,7 +1,7 @@
 App\Entity\Provincias:
   attributes:
     id:
-      groups: ['post_dir', 'get_dir_cliente']
+      groups: ['post_dir', 'get_dir_cliente', 'provincias']
 
     provincia:
-      groups: ['post_dir', 'get_dir_cliente']
+      groups: ['post_dir', 'get_dir_cliente', 'provincias']
