--- a/config/serializer/Municipios.yaml
+++ b/config/serializer/Municipios.yaml
@@ -1,7 +1,7 @@
 App\Entity\Municipios:
   attributes:
     id:
-      groups: ['post_dir', 'get_dir_cliente']
+      groups: ['post_dir', 'get_dir_cliente', 'municipios']
 
     municipio:
-      groups: ['post_dir', 'get_dir_cliente']
+      groups: ['post_dir', 'get_dir_cliente', 'municipios']
