Sesion 15 - JWT y SECURITY BUNDLE

--- a/.env
+++ b/.env
@@ -45,3 +45,9 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/delivery?serverVersion=mariadb-10.4.11
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=d16db585f739599c0e8b1563c6cc3968
+###< lexik/jwt-authentication-bundle ###
